 8. Add config page to control which stream categories are enabled, to import
    new categories, and to remove imported categories. See README for import
    file format.
 9. Use QListWidget in Qt preferences dialog, so that keyboard navigation can be
    used.
10. Add ability to 'filter search' stream categories.
11. Add option to prevent system from suspending whilst playing (Linux only).
12. If playqueue is cleared when dynamizer is running, then also stop
    dynamizer.
13. Create a new SizeGrip class, so that we can force the size-grip on the main
    window to have the same height as toolbuttons - this makes it align to the
    bottom.
14. Place a 0-pixel wide 'size widget' at the bottom of each view, to attempt to
    ensure consistent sizes between views.
15. Make playqueue search consistent with view search - ie. only show search on
    activating 'Search Play Queue', do not toggle.
16. Initial MacOS port - thanks to Ian Scott
17. Podcast support.
18. Add config page to determine list of online providers.
19. If 'Basic'/'Personal' is selected in intitial settings wizard, then enable
    'stop playback' and 'stop dynamizer' options.
20. Store data under XDG_DATA_HOME (~/.local/share) Any existing files will be
    copied to the new location. NOTE: This is not backwards compatible, so if
    you downgrade Cantata, you will have issues (e.g. missing stream
    favourites)
21. Add two items to config file to modify cover-loading responsiveness. Please
    see README for further details.
22. Use "play" command if play button is pressed and there is no current song.
23. Use HTTPS URLs for Last.fm, Wikipedia, SoundCloud, etc, for non-windows
    builds.
24. Only show genre combo if we have some genres.
25. When parsing CUE files - attempt to load as UTF-8, and then "System"
    encoding. Support a new config item, 'cueFileCodecs', which allows extra
    Qt text-codecs to be tried (see README for details). If all of these fail,